@@ -34,6 +34,7 @@ Changes in beta release 2.5.22 (not released yet)
    - Fixed expansion of $[n-] and $[*], broken in 2.5.20.
    - Fixes for resizing shaded windows and windows with a gravity
      other than northwest.
+   - Fixed CursorStyle POSITION, broken since 2.3.24.
 
 -------------------------------------------------------------------
 
